# openapi-demo

./: .gitignore  pyproject.toml
tests/: swagger.json  test_openapi.py  test_parse_iso_duration.py
