[tool.poetry]
name = "openapi-demo"
version = "0.1.0"
description = ""
authors = ["Gerrit Schrader <gerrit.schrader@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
prance = "^0.20.2"
openapi-spec-validator = "^0.3.0"
jmespath = "^0.10.0"
jsonschema = "^3.2.0"

[tool.poetry.dev-dependencies]
pytest = "^6"
black = "^20.8b1"
pytest-benchmark = "^3.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
